--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ volumes:
 services:
   prometheus:
     image: prom/prometheus:latest
+    user: root
     container_name: prometheus
     ports:
       - 9090:9090
@@ -16,7 +17,7 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yaml'
     volumes:
       - ./config/prometheus.yaml:/etc/prometheus/prometheus.yaml:ro
-      - ./data:/prometheus
+      - ./data/prometheus:/prometheus
     restart: unless-stopped
 
   grafana:
@@ -40,8 +41,8 @@ services:
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
-    command:
-      - '-port=8098'
+    ports:
+      - '8080:8080'
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
